--- a/mobile2/mobile2/Pages/DetailPokemon.xaml
+++ b/mobile2/mobile2/Pages/DetailPokemon.xaml
@@ -1,18 +1,26 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="mobile2.Pages.DetailPokemon">
+             x:Class="mobile2.Pages.DetailPokemon"
+             Title="Détails du Pokémon">
+    
+    
   <ContentPage.Content>
-        <StackLayout HorizontalOptions="Center">
-            <Label Text="Détail du Pokémon !" FontSize="20" TextColor="Black" HorizontalTextAlignment="Center"  VerticalTextAlignment="Center" />
-            <Label HorizontalTextAlignment="Center" FontSize="20">
+        <StackLayout HorizontalOptions="Center" Margin="10">
+
+            <Label HorizontalTextAlignment="Center" 
+                   FontSize="Large">
                 <Label.FormattedText>
                     <FormattedString>
-                        <Span Text="{Binding Nom}" TextColor="Black"/>
+                        <Span Text="{Binding Nom}" 
+                              TextColor="Black"/>
                     </FormattedString>
                 </Label.FormattedText>
             </Label>
-            <Image Source="{Binding Pictures}" WidthRequest="100" HeightRequest="100" />
+            
+            <Image Source="{Binding Pictures}" 
+                   WidthRequest="150" 
+                   HeightRequest="150" />
 
             <StackLayout Orientation="Horizontal">
                 <Label>
@@ -28,7 +36,7 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <Span Text="Taille : " FontAttributes="Bold" TextColor="Black"/>
-                            <Span Text="{Binding height}" TextColor="Black"/>
+                            <Span Text="{Binding Height}" TextColor="Black"/>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
