--- a/mobile2/mobile2/Pages/AjoutPoke.xaml
+++ b/mobile2/mobile2/Pages/AjoutPoke.xaml
@@ -3,74 +3,34 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="mobile2.Pages.AjoutPoke">
     <ContentPage.Content>
-        <StackLayout>
-            <Entry x:Name="newNom" Placeholder="Nom"/>
-            <Entry x:Name="newTaille" Placeholder="Taille (en cm)"/>
-            <Entry x:Name="newPoid" Placeholder="Poid (en kg)"/>
-            <Entry x:Name="newHp" Placeholder="Vie"/>
-            <Entry x:Name="newType" Placeholder="Type"/>
+        <ScrollView>
+        <StackLayout Margin="20">
             
-           
-            
-            <Button x:Name="newButton" Text="Ajouté" Clicked="OnNewButtonClicked"/>
-            <Button x:Name="getButton" Text="Liste" Clicked="OnGetButtonClicked"/>
-            <Label x:Name="statusMessage"/>
+            <Entry x:Name="newNom" Placeholder="Nom" Margin="0,0,0,10"/>
+            <Button x:Name="BoutonImage" Text="Ajouter une image" Clicked="AjoutImage" BorderWidth="10" Margin="0,0,0,10"/>
+                <Image x:Name="ImagePoke" WidthRequest="150"/>
 
-            <CollectionView x:Name="collectionView">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <StackLayout>
-                            <Label>
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="Nom : " FontAttributes="Bold" TextColor="Black" FontSize="Medium"/>
-                                        <Span Text="{Binding Nom}" TextColor="Black" FontSize="Medium"/>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
 
-                            <Label>
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="Taille : " FontAttributes="Bold" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text="{Binding Height}" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text=" cm" TextColor="Silver" FontSize="Small"/>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
+             
+                    <Label x:Name="LabelTaille" Text="Taille : 1 "/>
+                <Slider x:Name="newTaille" Maximum="500" Minimum="1" ThumbColor="Black" MaximumTrackColor="Silver" MinimumTrackColor="Silver"   ValueChanged="ValeurSlider"  Margin="0,0,0,10"/>
 
-                            <Label>
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="Poid : " FontAttributes="Bold" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text="{Binding Weight}" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text=" kg" TextColor="Silver" FontSize="Small"/>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
+                <Label x:Name="LabelPoids" Text="Poids : 1 "/>
+                <Slider x:Name="newPoids" Maximum="1000" Minimum="1" ThumbColor="Black" MaximumTrackColor="Silver" MinimumTrackColor="Silver"  ValueChanged="ValeurSlider"  Margin="0,0,0,10" />
 
-                            <Label>
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="Vie : " FontAttributes="Bold" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text="{Binding Hp}" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text=" hp" TextColor="Silver" FontSize="Small"/>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
+                <Label x:Name="LabelHp" Text="Points de vie : 1 "/>
+                <Slider x:Name="newHp" Maximum="255" Minimum="1" ThumbColor="Black" MaximumTrackColor="Silver" MinimumTrackColor="Silver"  ValueChanged="ValeurSlider" Margin="0,0,0,10" />
 
-                            <Label>
-                                <Label.FormattedText>
-                                    <FormattedString>
-                                        <Span Text="Type : " FontAttributes="Bold" TextColor="Silver" FontSize="Small"/>
-                                        <Span Text="{Binding Types}" TextColor="Silver" FontSize="Small"/>
-                                    </FormattedString>
-                                </Label.FormattedText>
-                            </Label>
-                        </StackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </StackLayout>
+                <Grid Margin="0,0,0,10">
+                <Picker x:Name="NewType1" Title="Type 1 (Obligatoire) : " Grid.Column="0"/>
+                <Picker x:Name="NewType2" Title="Type 2 (Optionnel) : " Grid.Column="1"/>
+                </Grid>
+
+
+
+                <Button x:Name="newButton" Text="Ajouter" Clicked="OnNewButtonClicked" BorderWidth="10"/>
+                <Label x:Name="statusMessage"/>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
